<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">jickjick</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_section_start">JJ</string>
    <string name="button_backward"><![CDATA["<<"]]></string>
    <string name="button_forward"><![CDATA[">>"]]></string>
    <string name="button_before_section"><![CDATA["<<J"]]></string>
    <string name="button_play"><![CDATA[">/||"]]></string>
    <string name="button_next_section"><![CDATA[">>J"]]></string>
    <string name="button_before_file"><![CDATA["|<<"]]></string>
    <string name="button_stop">ㅁ</string>
    <string name="button_next_sound"><![CDATA[">>|"]]></string>
    <string name="button_loop">Loop</string>
    <string name="_mp3">.mp3</string>
    <string name="title_activity_file_list">Sound Files</string>
    <string name="play">Play</string>
    <string name="add">Add</string>
    <string name="selectAll">V</string>
    <string name="this_song_is_the_last_song">마지막 곡입니다.</string>
    <string name="this_song_is_the_first_song">첫 곡입니다.</string>
    <string name="this_song_is_the_last_abrepeat">마지막 구간입니다.</string>
    <string name="this_song_is_the_first_abrepeat">첫 구간입니다.</string>
</resources>