<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context="atelier.soso.jickjick.MainActivity$PlaceholderFragment" >

    <!--
    기본 텍스트 뷰 

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    -->
    <!-- playline layer -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="10" >

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:hint="@string/edit_message" >

            <requestFocus />
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="sendMessage"
            android:text="@string/button_send" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="9" >

        <SeekBar
            android:id="@+id/playingSeekBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            />
        <!-- seekbar로 교
        <ProgressBar 
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/playingProgress" 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            />
             -->
    </LinearLayout>

    <!-- 3X3 Buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:weightSum="9" >

        <Button
            android:id="@+id/topLeftButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="controlSound"
            android:text="@string/button_backward" />

        <Button
            android:id="@+id/topButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="controlSound"
            android:text="@string/button_section_start" />

        <Button
            android:id="@+id/topRightButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="controlSound"
            android:text="@string/button_forward" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:weightSum="9" >

        <Button
            android:id="@+id/leftButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="controlSound"
            android:text="@string/button_before_section" />

        <Button
            android:id="@+id/centerButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="controlSound"
            android:text="@string/button_play" />

        <Button
            android:id="@+id/rightButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="controlSound"
            android:text="@string/button_next_section" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:weightSum="9" >

        <Button
            android:id="@+id/bottomLeftButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="controlSound"
            android:text="@string/button_before_file" />

        <Button
            android:id="@+id/bottomButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="controlSound"
            android:text="@string/button_stop" />

        <Button
            android:id="@+id/bottomRightButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="controlSound"
            android:text="@string/button_next_sound" />
    </LinearLayout>

</LinearLayout>