 <!-- android:background="#ffffff" -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="10" >

    <!-- top: title -->

    <EditText
        android:id="@+id/path"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/title_activity_file_list" />

    <!-- center : file items -->

    <ListView
        android:id="@+id/filelist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:divider="#242424"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/file_list_selector" />

    <!-- bottom : buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="10" >

        <Button
            android:id="@+id/ButtonSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/ButtonPlay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:text="@string/play"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/ButtonAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:text="@string/add" />
    </LinearLayout>

</LinearLayout>